--- a/my-app/src/ScrollingWordSection.css
+++ b/my-app/src/ScrollingWordSection.css
@@ -48,9 +48,11 @@
 
 .single-text-box {
   position: absolute;
-  border: 2px solid white;
+  border: 1px solid white;
   border-radius: 9999px;
   padding: 0.75rem 1.5rem;
+  font-family: Helvetica, sans-serif;
+  font-size: 1rem;
   font-weight: 100;
   white-space: nowrap;
   color: white;
