--- a/my-app/src/ThreeDSection.css
+++ b/my-app/src/ThreeDSection.css
@@ -9,7 +9,17 @@
   align-items: center;
   justify-content: center;
   background-color: #fff57e;
+  flex-direction: column;
   padding: 48px 18px;
+}
+
+.three-section p {
+    position: relative;
+    width: 100%;
+    font-style: italic;
+    font-size: 1rem;
+    color: black;
+    padding-bottom: 8rem;
 }
 
 .three-inner {
